--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,5 @@ repositories {
 
 dependencies {
     compile group: 'org.fusesource', name: 'sigar', version: '1.6.4'
+    compile group: 'junit', name: 'junit', version: '4.11'
 }
